--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-{%- assign _bootstrapposts = site.posts | sort: 'date' | reverse -%}
-{%- include header.html scrolly_nav=_bootstrapposts -%}
+{%- assign _posts = site.categories.bootstrap | sort: 'date' | reverse -%}
+{%- include header.html scrolly_nav=_posts -%}
 <!-- Main -->
 <div id="main">
 	{%- if page.content != "" -%}
 		{%- include section.html title=page.title photo=page.cover-photo photo-alt=page.cover-photo-alt auto-header=page.auto-header content=page.content -%}
 	{%- endif -%}
 	<!-- Posts List -->
-	{%- for _post in _bootstrapposts -%}
+	{%- for _post in _posts -%}
 		{%- capture _title -%}
 			<a href="{{- _post.url | absolute_url -}}">{{- _post.title -}}</a>
 		{%- endcapture -%}
